<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFiChat</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="reset">Reset</string>
    <string name="create_group">Create Group</string>
    <string name="msg">Send Message</string>
    <string name="broadcast_connection">Broadcast Connection</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="start_chat_button">Start Chatting</string>
    <string name="empty"></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="client_text">This device is a client. Click \'Start Chatting\' button</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
