<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item-->
    <!--android:id="@+id/btn_direct_enable"-->
    <!--android:icon="@drawable/ic_action_on_off"-->
    <!--android:showAsAction="ifRoom|withText"-->
    <!--android:title="@string/enable_p2p_button" />-->

    <item
        android:id="@+id/btn_direct_discover"
        android:showAsAction="never"
        android:title="@string/discover_peers_button" />

    <item
        android:id="@+id/btn_create_group"
        android:showAsAction="never"
        android:title="@string/create_group" />

    <item
        android:id="@+id/btn_broadcast_connection"
        android:showAsAction="never"
        android:title="@string/broadcast_connection" />

    <item
        android:id="@+id/btn_msg"
        android:showAsAction="never"
        android:title="@string/msg" />

    <item
        android:id="@+id/btn_reset"
        android:showAsAction="never"
        android:title="@string/reset" />

    <item
        android:id="@+id/btn_print_list"
        android:showAsAction="never"
        android:title="DEBUG: print list" />

</menu>
